<resources>
    <string name="app_name">AboutMe</string>
    <string name="myspace_step1_main">마이스페이스\nSTEP 01: 닉네임</string>
    <string name="myspace_step1_sub">마이스페이스에서 사용할 닉네임을 입력해주세요.</string>
    <string name="myspace_step1_sub2">친구에게 내가 누구인지 알려주세요.</string>
    <string name="myspace_step2_main">마이스페이스\nSTEP 02: 캐릭터</string>
    <string name="myspace_step2_sub">마이스페이스에서 사용할 캐릭터를 선택해주세요.</string>
    <string name="myspace_step2_sub2">친구에게 내가 어떤 모습일지 알려주세요.</string>
    <string name="myspace_step3_main">마이스페이스\nSTEP 03: 스페이스</string>
    <string name="myspace_step3_sub">마이스페이스에서 사용할 배경을 선택해주세요.</string>
    <string name="myspace_step3_sub2">나의 이미지와 어울리는 스페이스 배경을 골라보세요.</string>

    <string name="step3_schedule">일정을 입력하세요.</string>
    <string name="step3_comment">하고 싶은 말을 자유롭게 입력하세요.</string>
    <string name="step3_feeling">내 기분을 표현해보세요.</string>
    <string name="step3_photo">사진으로 나의 일상을 공유해보세요.</string>
    <string name="step3_music">내가 좋아하는 노래를 공유해보세요.</string>
    <string name="step3_story">방명록에 나의 흔적을 남겨보세요.</string>

    <!-- TODO: Remove or change this placeholder text -->
    //카톡 링크 공유(애플리케이션 등록)
    <string name="kakao_scheme" translatable="false">kakao14bbf6997b475309590efc7c9a7d9b11</string>
    <string name="kakao_share_app_key" translatable="false">14bbf6997b475309590efc7c9a7d9b11</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nickname">닉네임</string>
    <string name="agit_spacename">00\'s 스페이스</string>
    <string name="agitspacetitle_2">스페이스</string>
    <string name="agitspacetitle_1">00\'s</string>

</resources>