<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_myspacestep1"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/member_logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/myspace_step1_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gmarketsansmedium"
        android:text="@string/myspace_step1_main"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/member_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/member_logo" />

    <TextView
        android:id="@+id/myspace_step1_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/gmarketsansmedium"
        android:text="@string/myspace_step1_sub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myspace_step1_main" />

    <TextView
        android:id="@+id/myspace_step1_sub2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/gmarketsanslight"
        android:text="@string/myspace_step1_sub2"
        app:layout_constraintEnd_toEndOf="@+id/myspace_step1_sub"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/myspace_step1_sub"
        app:layout_constraintTop_toBottomOf="@+id/myspace_step1_sub" />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:fontFamily="@font/gmarketsansmedium"
        android:hint="@string/nickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myspace_step1_sub2"
        android:background="@drawable/step1_nickname_new" />

    <ImageButton
        android:id="@+id/next_ib_step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:background="@color/transparent"
        android:src="@drawable/next_korean"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_horizontalBias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="0dp"
        app:layout_constraintTop_toBottomOf="@+id/next_ib_step1"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:lottie_rawRes="@raw/myspace_step"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:max="100"
        android:progress="25"
        app:trackColor="@color/gray"
        app:trackThickness="15dp"
        app:trackCornerRadius="100dp"
        app:indicatorColor="@color/icon_aboutme_background"
        app:layout_constraintTop_toBottomOf="@+id/next_ib_step1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/easteregg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/animationView"
        android:fontFamily="@font/gmarketsansmedium"
        android:text="시작이 반이다..."
        android:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>