<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_myspacemain"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@color/transparent"
        android:src="@drawable/back"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/myprofile_share"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/myspace_title"
        app:layout_constraintTop_toTopOf="@+id/back" />

    <TextView
        android:id="@+id/myspace_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/gmarketsansmedium"
        android:text="00's 스페이스"
        android:textSize="25sp"
        android:gravity="center"
        android:background="@drawable/step3_titlebox_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back"  />

    <ImageView
        android:id="@+id/step3_selected_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:src="@drawable/step3_room_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myspace_title" />

    <ImageButton
        android:id="@+id/step3_feeling"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="12dp"
        android:background="@color/transparent"
        android:src="@drawable/step3_feeling"
        app:layout_constraintBottom_toTopOf="@+id/step3_selected_avatar"
        app:layout_constraintStart_toStartOf="@+id/step3_selected_avatar" />

    <ImageButton
        android:id="@+id/step3_music"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:background="@color/transparent"
        android:src="@drawable/step3_music"
        app:layout_constraintBottom_toTopOf="@+id/step3_selected_avatar"
        app:layout_constraintStart_toEndOf="@+id/step3_feeling" />

    <ImageButton
        android:id="@+id/step3_photo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@color/transparent"
        android:src="@drawable/step3_photo"
        app:layout_constraintStart_toStartOf="@id/step3_story"
        app:layout_constraintBottom_toTopOf="@id/step3_feeling"/>

    <ImageButton
        android:id="@+id/step3_story"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:background="@color/transparent"
        android:src="@drawable/step3_story"
        app:layout_constraintStart_toEndOf="@+id/step3_selected_avatar"
        app:layout_constraintTop_toTopOf="@+id/step3_selected_avatar" />

    <ImageButton
        android:id="@+id/step3_schedule"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:background="@color/transparent"
        android:src="@drawable/step3_schedule"
        app:layout_constraintBottom_toTopOf="@+id/step3_comment"
        app:layout_constraintEnd_toStartOf="@+id/step3_comment"/>

    <ImageButton
        android:id="@+id/step3_comment"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="36dp"
        android:background="@color/transparent"
        android:src="@drawable/step3_comment"
        app:layout_constraintBottom_toTopOf="@+id/step3_selected_avatar"
        app:layout_constraintEnd_toStartOf="@+id/step3_feeling" />

    <ImageView
        android:id="@+id/step3_selected_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/step2_avatar_1"
        app:layout_constraintBottom_toBottomOf="@+id/step3_selected_room"
        app:layout_constraintEnd_toEndOf="@+id/step3_selected_room"
        app:layout_constraintStart_toStartOf="@+id/step3_selected_room"
        app:layout_constraintTop_toTopOf="@+id/step3_selected_room"
        app:layout_constraintVertical_bias="0.782" />

    <RelativeLayout
        android:id="@+id/step3_feeling_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/step3_selected_room"
        app:layout_constraintStart_toStartOf="@+id/step3_selected_room">

        <TextView
            android:id="@+id/step3_feeling_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gmarketsansmedium"
            android:text="@string/step3_feeling"
            android:visibility="visible"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/step3_feeling_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/myspace_step3_et"
            android:visibility="visible"
            android:layout_below="@+id/step3_feeling_guide"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/step3_comment_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/step3_selected_room"
        app:layout_constraintStart_toStartOf="@+id/step3_selected_room">

        <TextView
            android:id="@+id/step3_comment_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gmarketsansmedium"
            android:text="@string/step3_comment"
            android:visibility="visible"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/step3_comment_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/myspace_step3_et"
            android:visibility="visible"
            android:layout_below="@+id/step3_comment_guide"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/step3_schedule_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/step3_selected_room"
        app:layout_constraintStart_toStartOf="@+id/step3_selected_room">

        <TextView
            android:id="@+id/step3_schedule_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gmarketsansmedium"
            android:text="@string/step3_schedule"
            android:visibility="visible"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/step3_schedule_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/myspace_step3_et"
            android:visibility="visible"
            android:layout_below="@+id/step3_schedule_guide"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/step3_music_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/step3_selected_room"
        app:layout_constraintStart_toStartOf="@+id/step3_selected_room">

        <TextView
            android:id="@+id/step3_music_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gmarketsansmedium"
            android:text="@string/step3_music"
            android:visibility="visible"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/step3_music_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/myspace_step3_et"
            android:visibility="visible"
            android:layout_below="@+id/step3_music_guide"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/step3_story_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/step3_selected_room"
        app:layout_constraintStart_toStartOf="@+id/step3_selected_room">

        <TextView
            android:id="@+id/step3_story_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gmarketsansmedium"
            android:text="@string/step3_story"
            android:visibility="visible"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/step3_story_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/myspace_step3_et"
            android:visibility="visible"
            android:layout_below="@+id/step3_story_guide"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/step3_photo_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/step3_selected_room"
        app:layout_constraintStart_toStartOf="@+id/step3_selected_room">

        <TextView
            android:id="@+id/step3_photo_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gmarketsansmedium"
            android:text="@string/step3_photo"
            android:visibility="visible"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/step3_photo_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/myspace_step3_et"
            android:visibility="visible"
            android:layout_below="@+id/step3_photo_guide"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>