<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@color/transparent"
        android:src="@drawable/back"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/myspace_step3_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gmarketsansmedium"
        android:text="@string/myspace_step3_main"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <TextView
        android:id="@+id/myspace_step3_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/gmarketsansmedium"
        android:text="@string/myspace_step2_sub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myspace_step3_main" />

    <TextView
        android:id="@+id/myspace_step3_sub2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/gmarketsanslight"
        android:text="@string/myspace_step3_sub2"
        app:layout_constraintEnd_toEndOf="@+id/myspace_step3_sub"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/myspace_step3_sub"
        app:layout_constraintTop_toBottomOf="@+id/myspace_step3_sub" />

    <ImageView
        android:id="@+id/step3_selected_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:foregroundGravity="center"
        android:src="@drawable/step3_room_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myspace_step3_sub2" />

    <ImageButton
        android:id="@+id/step3_feeling"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/step3_feeling"
        android:background="@color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/step3_selected_room"
        app:layout_constraintStart_toStartOf="@+id/step3_selected_room" />

    <ImageButton
        android:id="@+id/step3_music"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/step3_music"
        android:background="@color/transparent"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toBottomOf="@+id/step3_selected_room"
        app:layout_constraintStart_toStartOf="@+id/step3_feeling" />

    <ImageButton
        android:id="@+id/step3_comment"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/step3_comment"
        android:background="@color/transparent"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toBottomOf="@+id/step3_selected_room"
        app:layout_constraintStart_toStartOf="@+id/step3_music" />

    <ImageButton
        android:id="@+id/step3_schedule"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/step3_schedule"
        android:background="@color/transparent"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toBottomOf="@+id/step3_selected_room"
        app:layout_constraintStart_toStartOf="@+id/step3_comment" />

    <ImageButton
        android:id="@+id/step3_story"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/step3_story"
        android:background="@color/transparent"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toBottomOf="@+id/step3_selected_room"
        app:layout_constraintStart_toStartOf="@+id/step3_schedule" />

    <ImageButton
        android:id="@+id/step3_photo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/step3_photo"
        android:background="@color/transparent"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toBottomOf="@+id/step3_selected_room"
        app:layout_constraintStart_toStartOf="@+id/step3_story" />

    <ImageView
        android:id="@+id/step3_selected_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/step2_avatar_1"
        app:layout_constraintBottom_toBottomOf="@+id/step3_selected_room"
        app:layout_constraintEnd_toEndOf="@+id/step3_selected_room"
        app:layout_constraintStart_toStartOf="@+id/step3_selected_room"
        app:layout_constraintTop_toTopOf="@+id/step3_selected_room"
        app:layout_constraintVertical_bias="0.782" />


</androidx.constraintlayout.widget.ConstraintLayout>